# hypersolver

./: .gitignore  license  pyproject.toml  readme
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: lint.yaml  pypi.yaml  test.yaml
hypersolver/: __init__.py  accurate_derivative.py  basic_solver.py  derivative.py  lax_friedrichs.py  lax_wendroff.py  method_of_characteristics.py  ode_solver.py  pde_solver_unsplit.py  runga_kutta.py  runge_kutta.py  step.py  step_solver.py  util.py
hypersolver/base/: basic_solver.py  lax_friedrichs.py  lax_wendroff.py
hypersolver/base/tests/: lax_friedrichs_test.py  lax_wendroff_test.py
hypersolver/tests/: accurate_derivative_test.py  derivative_test.py  lax_friedrichs_test.py  lax_wendroff_test.py  method_of_characteristics_test.py  ode_solver_test.py  pde_solver_unsplit_test.py  runge_kutta_test.py  step_solver_test.py  step_test.py  util_test.py
